# brasileirao-bi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
docs/: DISCLAIMER.md  NOTICE.md  README.md  data_model.md  metrics.md
docs/decisions/: 001-ppj-model.md
scripts/: env.ps1
sql/: dim_teams.sql  future_matches_next5_2026.sql  league_ppj_avg_2026.sql  league_projection.sql  monte_carlo_matches_2026.sql  monte_carlo_neighbors_2026.sql  monte_carlo_summary_2026.sql  over_under_achievers_2026.sql  points_real_vs_projected_2026.sql  projection_by_match_2026.sql  team_form.sql  team_trend_2026.sql  team_trend_matchday.sql  team_trend_matchday_2026.sql
src/brasileirao_bi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/brasileirao_bi/bq/: client.py
src/brasileirao_bi/etl/: curated.py  extract.py  load_bq.py  monte_carlo.py  pipeline.py  transform.py  views.py
src/brasileirao_bi/etl/transforms/: form.py  future.py  hist.py  mart.py  opponent.py  projection.py
tests/: 01_test_api.py  02_test_match_details.py
